--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -196,11 +196,24 @@
     <Compile Include="Migrations\201809031058116_InitialModel.Designer.cs">
       <DependentUpon>201809031058116_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809031110398_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201809031110398_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201809031110398_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809031158150_AddMembershipType.cs" />
+    <Compile Include="Migrations\201809031158150_AddMembershipType.Designer.cs">
+      <DependentUpon>201809031158150_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809031201027_PopulateMembershipClass.cs" />
+    <Compile Include="Migrations\201809031201027_PopulateMembershipClass.Designer.cs">
+      <DependentUpon>201809031201027_PopulateMembershipClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -328,6 +341,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201809031058116_InitialModel.resx">
       <DependentUpon>201809031058116_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809031110398_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201809031110398_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809031158150_AddMembershipType.resx">
+      <DependentUpon>201809031158150_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809031201027_PopulateMembershipClass.resx">
+      <DependentUpon>201809031201027_PopulateMembershipClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
