--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -220,6 +220,10 @@
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-Vidly-20180829025617.mdf" />
+    <Content Include="App_Data\aspnet-Vidly-20180829025617_log.ldf">
+      <DependentUpon>aspnet-Vidly-20180829025617.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-lumen.css" />
@@ -323,7 +327,6 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\Customers\" />
   </ItemGroup>
   <ItemGroup>
