--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -305,6 +305,14 @@
     <Compile Include="Migrations\201810101311268_UpdateMovieClassAgain.Designer.cs">
       <DependentUpon>201810101311268_UpdateMovieClassAgain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811021111032_SeedUsers.cs" />
+    <Compile Include="Migrations\201811021111032_SeedUsers.Designer.cs">
+      <DependentUpon>201811021111032_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201811021215317_AddDrivingLicenseToUser.cs" />
+    <Compile Include="Migrations\201811021215317_AddDrivingLicenseToUser.Designer.cs">
+      <DependentUpon>201811021215317_AddDrivingLicenseToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -315,6 +323,7 @@
     <Compile Include="Models\Min18Years.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\NumberInStockCount.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -667,10 +676,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -748,6 +758,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810101311268_UpdateMovieClassAgain.resx">
       <DependentUpon>201810101311268_UpdateMovieClassAgain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811021111032_SeedUsers.resx">
+      <DependentUpon>201811021111032_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811021215317_AddDrivingLicenseToUser.resx">
+      <DependentUpon>201811021215317_AddDrivingLicenseToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
