--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
     <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\Api\NewRentalController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -238,6 +239,7 @@
     <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
     <Compile Include="Dtos\MovieDto.cs" />
+    <Compile Include="Dtos\NewRentalDto.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -334,6 +336,10 @@
     <Compile Include="Migrations\201811021215317_AddDrivingLicenseToUser.Designer.cs">
       <DependentUpon>201811021215317_AddDrivingLicenseToUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811061136355_AddRentalTable.cs" />
+    <Compile Include="Migrations\201811061136355_AddRentalTable.Designer.cs">
+      <DependentUpon>201811061136355_AddRentalTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -344,6 +350,7 @@
     <Compile Include="Models\Min18Years.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\NumberInStockCount.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -786,6 +793,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811021215317_AddDrivingLicenseToUser.resx">
       <DependentUpon>201811021215317_AddDrivingLicenseToUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811061136355_AddRentalTable.resx">
+      <DependentUpon>201811061136355_AddRentalTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
