--- a/Vidly/bin/Vidly.dll.config
+++ b/Vidly/bin/Vidly.dll.config
@@ -19,6 +19,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <sessionState mode="Off"></sessionState>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
