--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\RentalsController.cs" />
     <Compile Include="Dtos\CustomerDto.cs" />
     <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
@@ -339,6 +340,14 @@
     <Compile Include="Migrations\201811061136355_AddRentalTable.cs" />
     <Compile Include="Migrations\201811061136355_AddRentalTable.Designer.cs">
       <DependentUpon>201811061136355_AddRentalTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201811061317571_SetMovieClass1.cs" />
+    <Compile Include="Migrations\201811061317571_SetMovieClass1.Designer.cs">
+      <DependentUpon>201811061317571_SetMovieClass1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201811061319599_AddNumberAvailableToMovie.cs" />
+    <Compile Include="Migrations\201811061319599_AddNumberAvailableToMovie.Designer.cs">
+      <DependentUpon>201811061319599_AddNumberAvailableToMovie.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -527,9 +536,12 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bloodhound.js" />
+    <Content Include="Scripts\bloodhound.min.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -652,6 +664,10 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\typeahead.bundle.js" />
+    <Content Include="Scripts\typeahead.bundle.min.js" />
+    <Content Include="Scripts\typeahead.jquery.js" />
+    <Content Include="Scripts\typeahead.jquery.min.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -710,6 +726,7 @@
     <Content Include="Views\Movies\MovieForm.cshtml" />
     <Content Include="Views\Movies\ReadOnlyList.cshtml" />
     <Content Include="Views\Customers\ReadOnlyList.cshtml" />
+    <Content Include="Views\Rentals\New.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -796,6 +813,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811061136355_AddRentalTable.resx">
       <DependentUpon>201811061136355_AddRentalTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811061317571_SetMovieClass1.resx">
+      <DependentUpon>201811061317571_SetMovieClass1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811061319599_AddNumberAvailableToMovie.resx">
+      <DependentUpon>201811061319599_AddNumberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
