--- a/Vidly/packages.config
+++ b/Vidly/packages.config
@@ -43,6 +43,7 @@
   <package id="popper.js" version="1.14.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="toastr" version="2.1.1" targetFramework="net452" />
   <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
