--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -22,7 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On">
+    <customErrors mode="RemoteOnly">
       <error statusCode="404" redirect="~/404.html" />
     </customErrors>
     <authentication mode="None" />
