MovieList Rental Table Update

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -375,7 +375,10 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\MovieFormViewModel.cs" />
+    <Compile Include="ViewModels\PeopleSelectionViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
+    <Compile Include="ViewModels\SelectPersonViewModel.cs" />
+    <Compile Include="ViewModels\UpdateRentalsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="404.html" />
@@ -803,6 +806,7 @@
     <Content Include="Views\Movies\ReadOnlyList.cshtml" />
     <Content Include="Views\Customers\ReadOnlyList.cshtml" />
     <Content Include="Views\Rentals\New.cshtml" />
+    <Content Include="Views\Customers\_PartialMovieList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
